--- a/admin_webapp/index.html
+++ b/admin_webapp/index.html
@@ -12,7 +12,7 @@
 
         <div class="row h-25 py-5">
             <div class="container col-12">
-                <form>
+                <form onsubmit="event.preventDefault(); send();">
                     <div class="row">
                         <div class="col-2">
                             <div class="form-check form-check-inline fs-2">
