--- a/docker/worker/user_webapp/buttons.html
+++ b/docker/worker/user_webapp/buttons.html
@@ -10,7 +10,7 @@
 </head>
 <body style="overflow: hidden;">
 
-    <div class="container h-100 g-0">
+    <div class="container h-100 g-0" id="buttons">
         <div class="row h-50 pt-3 w-100 pb-1 mx-0">
             <button class="container col-5 me-2 rounded h1" style="background: rgb(67, 67, 209);">
                 A
@@ -27,6 +27,10 @@
                 D
             </button>
         </div>
+    </div>
+
+    <div id="loading">
+        
     </div>
 
 </body>
