--- a/docker/worker/user_webapp/buttons.html
+++ b/docker/worker/user_webapp/buttons.html
@@ -29,8 +29,10 @@
         </div>
     </div>
 
-    <div id="loading">
-        
+    <div id="loading" hidden>
+        <div class="container h-75 mt-5 d-flex align-items-center justify-content-center">
+            <div class="spinner-border" style="width: 5rem; height: 5rem; color:rgba(51,51,255,0.8)"></div>
+        </div>
     </div>
 
 </body>
