--- a/admin_webapp/index.html
+++ b/admin_webapp/index.html
@@ -20,19 +20,19 @@
                                 <label class="form-check-label ms-2" for="question">Q.N.</label>
                             </div>
                         </div>
-                        <div class="col-2">
+                        <div class="col-1">
                             <div class="form-check form-check-inline fs-2">
                                 <input class="form-check-input" type="radio" id="A" name="answer" value="A">
                                 <label class="form-check-label" for="A">A</label>
                             </div>
                         </div>
-                        <div class="col-2">
+                        <div class="col-1">
                             <div class="form-check form-check-inline fs-2">
                                 <input class="form-check-input" type="radio" id="B" name="answer" value="B">
                                 <label class="form-check-label" for="B">B</label>
                             </div>
                         </div>
-                        <div class="col-2">
+                        <div class="col-1">
                             <div class="form-check form-check-inline fs-2">
                                 <input class="form-check-input" type="radio" id="C" name="answer" value="C">
                                 <label class="form-check-label" for="C">C</label>
@@ -44,9 +44,14 @@
                                 <label class="form-check-label" for="D">D</label>
                             </div>
                         </div>
-                        <div class="col-2">
+                        <div class="col-3">
                             <div class="">
                                 <input type="submit" value="Start" class="btn btn-success fs-4">
+                            </div>
+                        </div>
+                        <div class="col-2">
+                            <div class="">
+                                <button onclick="event.preventDefault(); end();" class="btn btn-danger fs-4">End</button>
                             </div>
                         </div>
                     </div>
