--- a/docker/worker/user_webapp/index.html
+++ b/docker/worker/user_webapp/index.html
@@ -8,7 +8,7 @@
         crossorigin="anonymous"></script>
     <title>QuizTime</title>
 </head>
-<body style="overflow: hidden;">
+<body style="overflow: hidden;" onload="init();">
     
     <div class="container h-75 text-center" id="nickname">
         <div class="container h-50"></div>
