--- a/docker/worker/user_webapp/index.html
+++ b/docker/worker/user_webapp/index.html
@@ -66,7 +66,7 @@
             Congratulations!
         </div>
         <div class="container col-12 mb-3 fs-1" style="color: rgba(51,51,255,0.8)">
-            You scored <span id="rank">126</span>
+            Your score is <span id="rank">0</span>
         </div>
         <div class="container h-50">
             <img class="h-100" src="./fireworks.gif">
