--- a/admin_webapp/index.html
+++ b/admin_webapp/index.html
@@ -6,6 +6,7 @@
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
         crossorigin="anonymous"></script>
     <title>QuizTime Admin</title>
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 </head>
 <body>
     <div class="container">
@@ -16,7 +17,7 @@
                     <div class="row">
                         <div class="col-2">
                             <div class="form-check form-check-inline fs-2">
-                                <input class="form-check-input fs-4 h-75 w-50" type="text" id="question">
+                                <input class="form-check-input fs-4 h-75 w-50" type="text" value="1" id="question">
                                 <label class="form-check-label ms-2" for="question">Q.N.</label>
                             </div>
                         </div>
@@ -63,7 +64,8 @@
         <div class="row h-75 py-3">
             <div class="container col-6">
                 <!-- Inserire Elastic Search grafo a torta su risposte all'ultima domanda -->
-                <iframe class="h-100 w-100 border" src=""></iframe>
+                <iframe class="h-100 w-100 border" src="http://localhost:5601/app/dashboards#/view/51a2cf10-2798-11ed-aa14-171b877f91aa?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3Anow-15m%2Cto%3Anow))&hide-filter-bar=true"></iframe>
+
             </div>
             <div class="container col-6">
                 <!-- Inserire Elastic Search classifica totale -->
