--- a/docker/worker/user_webapp/index.html
+++ b/docker/worker/user_webapp/index.html
@@ -63,7 +63,7 @@
             <img class="h-100" src="./fireworks.gif">
         </div>
         <div class="container col-12 mb-3 h1 fw-bold" style="color: rgba(51,51,255,0.8)">
-            Congratulations!
+            Congratulations <span id="cname"></span>!
         </div>
         <div class="container col-12 mb-3 fs-1" style="color: rgba(51,51,255,0.8)">
             Your score is <span id="rank">0</span>
