--- a/admin_webapp/index.html
+++ b/admin_webapp/index.html
@@ -64,7 +64,7 @@
         <div class="row h-75 py-3">
             <div class="container col-6">
                 <!-- Inserire Elastic Search grafo a torta su risposte all'ultima domanda -->
-                <iframe class="h-100 w-100 border" src="http://localhost:5601/app/dashboards#/view/51a2cf10-2798-11ed-aa14-171b877f91aa?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3Anow-15m%2Cto%3Anow))&hide-filter-bar=true"></iframe>
+                <iframe class="h-100 w-100 border" src="http://localhost:5601/app/dashboards#/view/51a2cf10-2798-11ed-aa14-171b877f91aa?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!f%2Cvalue%3A10000)%2Ctime%3A(from%3Anow-15m%2Cto%3Anow))&hide-filter-bar=true"></iframe>
 
             </div>
             <div class="container col-6">
