--- a/admin_webapp/index.html
+++ b/admin_webapp/index.html
@@ -8,7 +8,7 @@
     <title>QuizTime Admin</title>
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 </head>
-<body>
+<body onload="setQN()">
     <div class="container">
 
         <div class="row h-25 py-5">
