--- a/admin_webapp/index.html
+++ b/admin_webapp/index.html
@@ -7,6 +7,7 @@
         crossorigin="anonymous"></script>
     <title>QuizTime Admin</title>
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body onload="setQN();">
     <div class="container">
