--- a/docker/worker/user_webapp/index.html
+++ b/docker/worker/user_webapp/index.html
@@ -7,6 +7,7 @@
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
         crossorigin="anonymous"></script>
     <title>QuizTime</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body style="overflow: hidden;" onload="init();">
     
