--- a/admin_webapp/index.html
+++ b/admin_webapp/index.html
@@ -48,7 +48,7 @@
                         </div>
                         <div class="col-1">
                             <div class="">
-                                <input type="submit" value="Start" class="btn btn-success fs-4">
+                                <input id="btn1" type="submit" value="Start" class="btn btn-success fs-4">
                             </div>
                         </div>
                         <div class="col-2">
@@ -58,7 +58,7 @@
                         </div>
                         <div class="col-2">
                             <div class="">
-                                <button onclick="event.preventDefault(); end();" class="btn btn-danger fs-4">End</button>
+                                <button id="btn2" onclick="event.preventDefault(); end();" class="btn btn-danger fs-4">End</button>
                             </div>
                         </div>
                     </div>
