--- a/admin_webapp/index.html
+++ b/admin_webapp/index.html
@@ -69,11 +69,11 @@
 
         <div class="row h-75 py-3">
             <div class="container col-6">
-                <iframe class="h-100 w-100 border" src="http://localhost:5601/app/dashboards#/view/51a2cf10-2798-11ed-aa14-171b877f91aa?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!f%2Cvalue%3A10000)%2Ctime%3A(from%3Anow-15m%2Cto%3Anow))&hide-filter-bar=true"></iframe>
+                <iframe class="h-100 w-100 border" src="http://aws.quiztime.tk:5601/app/dashboards#/view/51a2cf10-2798-11ed-aa14-171b877f91aa?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!f%2Cvalue%3A10000)%2Ctime%3A(from%3Anow-15m%2Cto%3Anow))&hide-filter-bar=true"></iframe>
 
             </div>
             <div class="container col-6">
-                <iframe class="h-100 w-100 border" src="http://localhost:5601/app/dashboards#/view/68c02cc0-2846-11ed-8cbd-8fbb55568e6a?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!f%2Cvalue%3A10000)%2Ctime%3A(from%3Anow-15m%2Cto%3Anow))&hide-filter-bar=true"></iframe>
+                <iframe class="h-100 w-100 border" src="http://aws.quiztime.tk:5601/app/dashboards#/view/68c02cc0-2846-11ed-8cbd-8fbb55568e6a?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!f%2Cvalue%3A10000)%2Ctime%3A(from%3Anow-15m%2Cto%3Anow))&hide-filter-bar=true"></iframe>
             </div>
         </div>
     </div>
